# Mono2stereo

./: CMakeLists.txt  README.md  package.xml  setting_left_360p.yaml  setting_left_original.yaml  setting_right_360p.yaml  setting_right_original.yaml
src/: converter.cpp
